objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <formula>LEFT(FirstName,2)+RIGHT( LastName ,2)+&quot;@gmail.com&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekDay__c</fullName>
        <formula>CASE(WEEKDAY(DATEVALUE(CreatedDate)), 1,&apos;SUNDAY&apos; , 2, &apos;MONDAY&apos;,3,&apos;TUESDAY&apos;,4,&apos;WEDNESDAY&apos;,5,&apos;THURSDAY&apos;,6,&apos;FRIDAY&apos;,&apos;SATUDAY&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WeekDay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>FirstName + &apos; &apos;+LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adhar_Number__c</fullName>
        <label>Adhar Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <formula>TEXT(Account.Account_Status__c) ==&apos;HIGH&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Adhar_Validation_rule</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( TEXT( Adhar_Number__c ) ) !=12</errorConditionFormula>
        <errorMessage>Adhar Number should have 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneNumberValidation</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Phone )</errorConditionFormula>
        <errorMessage>phone number should not be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneNumberAndHomePhone</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(Phone),NOT(ISBLANK(HomePhone)))</errorConditionFormula>
        <errorMessage>Home Phone Should be empty and phone number should be there</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstName_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>FirstName == LastName</errorConditionFormula>
        <errorMessage>FirstName and LastName should be different</errorMessage>
    </validationRules>
</CustomObject>